--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">App_vezdekod_5</string>
+    <string-array name="banks">
+        <item>Счёт VK Pay ⋅ 1234</item>
+    </string-array>
 </resources>
